fix(gui)!: Allow views to customize their alignment

--- a/gui/src/App.css
+++ b/gui/src/App.css
@@ -1,8 +1,5 @@
 .View-container {
-	padding: 24;
-	min-height: 100vh;
-	overflow-y: auto;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  padding: 24;
+  min-height: 100vh;
+  overflow-y: auto;
 }
